devscripts (2.10.9) UNRELEASED; urgency=low

  * uscan: allow the path for downloaded files to be specified. Thanks Steffen
           Moeller for the patch. (Closes: #439060)
  * debsign: work in $TMPDIR (if set) or /tmp. (Closes: #420472)

 -- Mohammed Adnène Trojette <adn+deb@diwi.org>  Tue, 11 Sep 2007 17:59:35 +0200

devscripts (2.10.8) unstable; urgency=low

  [ Mohammed Adnène Trojette ]
  * debcommit:
     + allow an alternate location for the changelog. By default
       debian/changelog is used. Thanks Sjoerd Simons and Laurent Bigonville
       for the patches. (Closes: #437387)
     + add a -C/--confirm option to confirm the commit message. Thanks Laurent
       Bigonville for forwardporting the patch from Ubuntu. (Closes: #439054)
     + allow tagging with bazaar. (Closes: #441105)
  * debuild:
     + keep DISPLAY, XAUTHORITY and GNOME_KEYRING_SOCKET environment
       variables around for safe keeping before we destroy the
       environment, and re-set them before running debsign; thanks Steve
       Kovalik for the patch. (Closes: #322208)
     + also keep GPG_AGENT_INFO and SSH_AUTH_SOCK.
  * licensecheck: decruft // comments. (Closes: #441073)
  * debchange: update according to new Backports.org policy. (Closes: #439854)

  [ Stefano Zacchiroli ]
  * debcheckout: new script to checkout the version control system repository
    of a package

  [ Joey Hess ]
  * debcheckout: when checking out svn repos, check them out into a directory
    named for the package, to avoid checking out into ie, a trunk directory.

  [ Adam D. Barratt ]
  * licensecheck
    + tidy up the pre-check regexes
    + unescape "\@"s in copyright statements
    + decruft © as well as (C)
    + make the copyright regex more flexible
    + correctly handle metacharacters found in potential copyright statements
  * debdiff: allow whitespace to be ignored in diffs (Closes: #439163)
  * debcommit
    + Allow changes to only debian/changelog to be committed.