@@ -262,6 +262,14 @@ Note that there may be some interesting interactions if
 multi-maintainer mode is in use; you will probably wish to check the
 changelog manually before uploading it in such cases.
 .TP
+.BR \-\-mainttrailer ", " \-t
+Do not modify the existing changelog trailer line (i.e. the maintainer and 
+date-stamp details).  This option differs from \fB\-\-maintmaint\fR in that it 
+will use multi-maintainer mode if appropriate, with the exception of editing 
+the trailer.  This option will be ignored if combined with options that require 
+the trailer to be modified (e.g. \fB\-\-create\fR, \fB\-\-release\fR,
+\fB\-i\fR, \fB\-\-qa\fR, etc.)
+.TP
 \fB\-\-check-dirname-level\fR \fIN\fR
 See the above section "Directory name checking" for an explanation of
 this option.
